--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -9,23 +9,23 @@
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 74.088,
-  "robotMOI": 6.883,
+  "robotMass": 48.53,
+  "robotMOI": 4.696,
   "robotTrackwidth": 0.546,
   "driveWheelRadius": 0.048,
-  "driveGearing": 5.143,
-  "maxDriveSpeed": 5.45,
-  "driveMotorType": "NEO",
-  "driveCurrentLimit": 60.0,
-  "wheelCOF": 1.2,
-  "flModuleX": 0.273,
-  "flModuleY": 0.273,
-  "frModuleX": 0.273,
-  "frModuleY": -0.273,
-  "blModuleX": -0.273,
-  "blModuleY": 0.273,
-  "brModuleX": -0.273,
-  "brModuleY": -0.273,
+  "driveGearing": 6.75,
+  "maxDriveSpeed": 5.0,
+  "driveMotorType": "vortex",
+  "driveCurrentLimit": 40.0,
+  "wheelCOF": 1.19,
+  "flModuleX": 0.327,
+  "flModuleY": 0.327,
+  "frModuleX": 0.327,
+  "frModuleY": -0.327,
+  "blModuleX": -0.327,
+  "blModuleY": 0.327,
+  "brModuleX": -0.327,
+  "brModuleY": -0.327,
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": []
